# Lof

./: .clippy.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION_SUMMARY.md  Makefile  README.md  SECURITY.md  TESTING.md  deny.toml  lean.lean  rustfmt.toml
.github/workflows/: ci.yml  tier1-fast-checks.yml  tier2-integration-tests.yml  tier3-verification.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: lang.md
examples/: README.md
examples/01_functions/: functions.lof
examples/03_pattern_matching/: pattern_matching.lof
examples/04_recursion/: recursion.lof
lof/: Cargo.toml
lof-codegen/: Cargo.toml
lof-codegen/src/: lib.rs  wasm.rs
lof-witness-gen/: Cargo.toml
lof-witness-gen/src/: main.rs  wasm_gen.rs
lof/doc/: multiply.rs
lof/src/: ast.rs  cli.rs  ir.rs  ir_generator.rs  lexer.rs  lib.rs  logger.rs  main.rs  parser.rs  pipeline.rs  r1cs.rs  typechecker.rs
lof/tests/: integration_tests.rs  ir_tests.rs  lexer_tests.rs  parser_tests.rs  r1cs_tests.rs  syntax_documentation_test.rs  typechecker_tests.rs
lof/tests/integration/: compiler_integration.rs  mod.rs
lofit/: Cargo.toml
lofit/src/: circuit.rs  field.rs  lib.rs  main.rs  package_web.rs  proving.rs  r1cs.rs  setup.rs  verification.rs  wasm.rs  witness.rs
lofit/tests/: circuit_tests.rs  integration_tests.rs  r1cs_tests.rs  wasm_tests.rs  witness_tests.rs
src/: main.rs
src/constraint_gen/: mod.rs  r1cs.rs
src/examples/: add.rs  compare.rs  mod.rs
src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs
tests/: runcompiletests.sh  runparsertests.sh  runtypecheckertests.sh
tests/frontend/: assert_invalid_reuse.lof  basic_pattern_match.lof  basic_valid.lof  basic_valid.r1cs  constants_only.lof  constants_reuse.lof  direct_return.lof  function_invalid_reuse.lof  function_linear.lof  function_multiple_params.lof  function_no_params.lof  inconsistent_return_types.lof  multiple_inputs_invalid.lof  multiple_inputs_valid.lof  nested_let_invalid.lof  nested_let_valid.lof  tuple_valid.lof  variable_used_after_match.lof
tests/integration/: README.md  constrained_witness_assert.lof  constrained_witness_match.lof  constrained_witness_mul.lof  unconstrained_witness.lof
tests/integration/invalid/: basic_invalid.lof  boolean_invalid.lof  test_double_usage.lof  tuple_ivalid.lof
tests/integration/regression/: test_component.lof  test_component_simple.lof  test_pattern.lof  (+4 more)
tests/scripts/: README.md  runcompiletests.sh  runparsertests.sh  runtypecheckertests.sh
verification/: README.md  package.json  verify.py
verification/scripts/: compare_results.py  compile_both.sh  full_witness.json  generate_witnesses.sh  generate_witnesses_simple.py  inputs.json  multiply.r1cs  run_all_verification.sh  run_verification.sh
(+91 files in other folders)
