[package]
name = "lof-codegen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lof = { path = "../lof" }
lofit = { path = "../lofit" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["console_error_panic_hook"]