[package]
name = "lof"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
hex = "0.4.3"
tempfile = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lofit = { path = "../lofit" }
thiserror = "1.0"
