[package]
name = "lofit"
version = "0.1.0"
edition = "2021"
include = [
    "src/**",
    "pkg/lofit.js",
    "pkg/lofit_bg.wasm",
    "pkg/lofit.d.ts",
    "pkg/lofit_bg.wasm.d.ts",
    "Cargo.toml",
    "README.md",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-std = { version = "0.5.0", features = ["std"] }
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.0"
thiserror = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
num-bigint = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
which = "6.0"
